// Copyright (c) YugaByte, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
// in compliance with the License.  You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software distributed under the License
// is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
// or implied.  See the License for the specific language governing permissions and limitations
// under the License.
//

syntax = "proto3";

import "google/protobuf/descriptor.proto";

package yb.rpc;

extend google.protobuf.ServiceOptions {
  string custom_service_name = 50011;
  // To be set when ASH metadata is to be sent with all the RPCs of that service
  bool service_send_metadata = 50012;
}

extend google.protobuf.MethodOptions {
  bool trivial = 50001;
  // To be set when only a handful of RPCs should have ASH metadata in a service
  bool send_metadata = 50002;
  // To be set when ASH metadata is not to be sent with certain RPCs in a service
  bool exclude_metadata = 50003;
}
